--- a/css/skillsstyle.css
+++ b/css/skillsstyle.css
@@ -21,6 +21,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  letter-spacing: 1.5px;
+
 }
 
 .right{
@@ -34,6 +36,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  letter-spacing: 1.5px;
+
 }
 
 .logo {
@@ -42,6 +46,8 @@
   margin-top: 0%;
   flex-shrink: 0;
   cursor: pointer;
+  letter-spacing: 1.5px;
+
 }
 /*Header End*/
 
@@ -80,17 +86,18 @@ h1{
   font-family: 'Lemon/Milk','Catamaran';
   color: white;
   text-align: center;
-  
+  letter-spacing: 1.5px;
+
 }
 
 
 
 .topText{
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 5%;
   color: white;
-  
+  max-width: 1100px;
   font-size: 16px;
   font-family: 'Century Gothic Paneuropean','Arial';
 }
@@ -99,8 +106,10 @@ h1{
    color: white;
    font-size: 16px;
    font-family: 'Century Gothic Paneuropean','Arial';
-   margin-left: 10%;
-   margin-right: 10%;
+   margin-left: auto;
+   margin-right: auto;
+   max-width: 1100px;
+
    margin-bottom: 11%;
 }
 .bold{
@@ -108,7 +117,7 @@ h1{
 }
 
 hr{
-  width: 80%;
+  width: 1100px;
 }
 /*Body End*/
 
@@ -147,6 +156,8 @@ hr{
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  letter-spacing: 1.5px;
+
 }
 .rightf a{
   text-decoration: none;
@@ -212,6 +223,8 @@ hr{
 .modal h3{
   font-family: 'Lemon/Milk',"Catamaran";
   color: white;
+  letter-spacing: 1.5px;
+
 }
 
 button {
@@ -230,6 +243,8 @@ button {
   font-size: 1em;
   font-family: 'Lemon/Milk',"Catamaran";
   width: 30%;
+  letter-spacing: 1.5px;
+
 }
 
 .btn-open {
@@ -428,7 +443,31 @@ hr{
 
 
 
+.topText{
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 5%;
+  color: white;
+  max-width: 1100px;
+  font-size: 16px;
+  font-family: 'Century Gothic Paneuropean','Arial';
+}
 
+.bottomText{
+   color: white;
+   font-size: 16px;
+   font-family: 'Century Gothic Paneuropean','Arial';
+   margin-left: 10%;
+   margin-right: 10%;
+   max-width: 1100px;
+
+   margin-bottom: 11%;
+}
+
+hr{
+  width: 80%;
+  border-color: rgb(255, 255, 255);
+}
 
 /*Footer Start*/
 .foot{
